@@ -4,7 +4,7 @@ package com.kenstevens.stratinit.ui.selection;
 public abstract class Selection {
 	private final Source source;
 	
-	public enum Source {CANVAS_SELECT, CANVAS_MOVE, UNIT_TAB, BATTLE_TAB, CITY_TAB, PLAYER_TAB, FUTURE_TAB};
+	public enum Source {CANVAS_SELECT, CANVAS_MOVE, UNIT_TAB, BATTLE_TAB, CITY_TAB, PLAYER_TAB, FUTURE_TAB, CANVAS_SELECT_OTHER};
 	
 	public Selection(Selection.Source source) {
 		this.source = source;
