@@ -2,6 +2,9 @@ Release 1.1.49
   * Setting move order on unit with 0 mob now draws black line
   * Building new city now updates map
   * Added supply unit list to Supply tab
+  * Show both my relation and their relation on player tab
+  * Allow next build for BASE (which makes sense when switch on tech gain is checked)
+  * Added configurable option (default on) that scrolls the map when you select a land or water square (thanks SuperNovaSS)
 
 Release 1.1.48
   * Fixed error that occurred when building a city.
